--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,17 +2,20 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: none #[ "main" ]
+  pull_request: 
+    branches: none #[ "main" ]
+    #allows you to run this workflow manually from the actions tab
+    workflow_dispatch:
 
 jobs:
 
-  build:
+  build-container:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
+      working-directory:
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
