--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,5 +17,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      working-directory:
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      working-directory: CRUD-API-SAMPLE
+      run: docker build . --file Dockerfile --tag my-CRUD-API:$(date +%s)
